# sesame-finetune

./: .env.example  .gitignore  README.md  illu.py  pretokenize.py  pyproject.toml  run.txt  test.py  test_custom_finetune.py  test_expresso.py  train.py
config/: sweep.config.yaml  train_expresso.toml  train_shortcut.toml
data_pipeline/: convert_expresso.py  convert_libritts_r.py  create_encoded_dataset.py  create_from_json.py  run.txt  test_expresso.ipynb  test_prompt_format.ipynb  tokenize_expresso.ipynb  utils.py
modeling/: generator.py  models.py  utils.py
tests/: test_batch_collation.py
train/: config.py  data.py  main.py  train.py
training_harness/: config.py  data.py  main.py  pyproject.toml  shortcut_layer.py  sweep.py  train.py
